# suppression_study

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirments.txt
.github/workflows/: tests.yaml
data/: project_selection.csv  python_repos.txt  python_repos_20.txt  python_repos_46_using_pylint.txt  python_repos_48_using_pylint.txt  repos_first_suppression_all_repos.csv  specific_numeric_type_map.csv
src/checkers/: GetMypyWarnings.py  GetPylintWarnings.py  GetWarningsSuper.py
src/preprocess/: Get1000Commits.py
src/suppression/: FormatSuppressionCommon.py  GrepSuppressionPython.py  GrepSuppressionSuper.py
src/suppression_study/checkers/: GetMypyWarnings.py  GetPylintWarnings.py  GetSuppressedPylintWarnings.py  GetWarningsSuper.py
src/suppression_study/code_evolution/: AnalyzeGitlogReport.py  ChangeEvent.py  CommitBlock.py  DiffBlock.py  ExtractHistory.py  GetSuppressionDeleteHistories.py  GitLogFromFinalStatus.py
src/suppression_study/evolution/: AccidentalSuppressionFinder.py  AccidentallySuppressedWarning.py  AnalyzeGitlogReport.py  ChangeEvent.py  CommitBlock.py  CommitBlockInfo.py  DiffBlock.py  ExtractHistory.py  ExtractHistoryGitblame.py  ExtractHistoryGitlog.py  ExtractHistoryPylint.py  FormatGitlogReport.py  GetSuppressionDeleteHistories.py  GitLogFromFinalStatus.py  IdentifyChangeOperation.py  MapWarningLines.py  Select1000Commits.py  Select1000commits.py  SuppressionHistory.py  SuppssionHistory.py  WarningTypeLine.py
src/suppression_study/experiments/: CheckAuthorDatePUI.py  CheckLineDistanceOfPUISuppreesions.py  CheckSuppressionLevels.py  ComputeAccidentallySuppressedWarnings.py  ComputeIntermediateChains.py  ComputeSuppressionHistories.py  ComputeWarningSuppressionMapsOnLatestCommit.py  CountSuppressionsInLatestCommit.py  CountSuppressionsNumOnAllCommits.py  CountSuppressionsNumOnMainCommits.py  CountSuppressionsOnLatestCommit.py  CountSuppressionsOnUnbiasedSample.py  DistributionOfSuppressionsNumOnAllCommits.py  DistributionOfSuppressionsNumOnMainCommits.py  DummyExperiment.py  Experiment.py  (+17 more)
tests/: TestUtils.py
tests/checkers/: test_GetPylintWarnings.py
tests/evolution/: expected_accidentally_suppressed_warnings.json  expected_accidentally_suppressed_warnings3.json  expected_accidentally_suppressed_warnings4.json  expected_accidentally_suppressed_warnings5.json  expected_accidentally_suppressed_warnings6.json  expected_histories_multi_branch.json  expected_histories_suppression_level_all.json  expected_selected_1000_commits.csv  histories_suppression_level_all.json  test_AccidentalSuppressionFinder.py  test_ExtractHistory.py  test_Select1000Commits.py
tests/occurrences/: test_OccurrencesVisualization.py
tests/preprocess/: test_Get1000Commits.py
(+78 files in other folders)
